# CoverUp

./: .gitignore  README.md  coverup.spec  pyproject.toml
scripts/: build_windows.py
src/coverup/: __main__.py  cli.py  ffmpeg_tools.py  gui.py  main.py  models.py  probe.py  processor.py  sampling.py  scanner.py
tests/: test_probe.py  test_processor.py  test_processor_accel.py  test_sampling.py  test_scanner.py
